--- a/stylesx.scss
+++ b/stylesx.scss
@@ -27,11 +27,11 @@
 }
 
 .bigBox {
-    padding: 150px 0px 150px 0px;
+    padding: 10% 0px 10% 0px;
 }
 
 .bigBox2 {
-    padding: 99px 0px 150px 0px;
+    padding: 10% 0px 10% 0px;
 }
 
 .nameMe {
