--- a/stylesx.scss
+++ b/stylesx.scss
@@ -38,6 +38,12 @@
     padding-top: 30px;
 }
 
+@media screen and (max-width: 1100px){
+    #profilePic {
+        margin-top:10%;
+    }
+}
+
 
 h1 {
     font-size: 4em !important;
@@ -157,4 +163,21 @@ img {
 
 .bottomPadding {
   margin-bottom: 30px;
+}
+
+.linkWrap {
+  position: relative;
+  display: inline-block;
+}
+
+.blocker {
+  position: absolute;
+  height:100%;
+  width: 100%;
+  z-index: 1;
+  background: rba(255,0,0,0.5);
+}
+
+.linkWrap iframe {
+  z-index: 2;
 }
